--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,3 +61,29 @@ html,body{
 
 
 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+
+.animate-slide{
+  animation: 15s slide linear infinite;
+}
+@keyframes slide {
+  from{
+    transform: translateX(0);
+  }
+  to{
+    transform: translateX(-100%);
+  }
+}
+
+
+
+
+
